--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ celery==5.2.7
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.3.0
-click==7.1.2
+click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
@@ -37,6 +37,7 @@ django-debug-toolbar==4.2.0
 django-environ==0.9.0
 django-extensions==3.2.3
 django-filter==22.1
+django-mathfilters==1.0.0
 django-pipeline==2.0.8
 django-polymorphic==3.1.0
 django-redis==5.2.0
@@ -55,6 +56,7 @@ feedparser==6.0.10
 gitdb==4.0.10
 GitPython==3.1.7
 google-auth==2.23.2
+gunicorn==21.2.0
 icalendar==5.0.10
 idna==3.4
 importlib-metadata==6.0.0
@@ -65,6 +67,7 @@ kubernetes==11.0.0
 Markdown==3.4.1
 matplotlib-inline==0.1.6
 oauthlib==3.2.2
+packaging==23.2
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
